[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Enemies/Enemy_projectile_spawner_light.png" type="Texture" id=1]
[ext_resource path="res://Images/Enemies/Enemy_projectile_spawner.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy_Projectile_spawner.gd" type="Script" id=3]
[ext_resource path="res://Images/Enemies/Enemy_projectile.png" type="Texture" id=4]
[ext_resource path="res://SoundEffects/forceField_004.wav" type="AudioStream" id=5]

[node name="Enemy_Projectile_spawner" type="Node2D"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Spawner" type="Sprite" parent="."]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Spawner"]
modulate = Color( 1.3, 1.2, 1.3, 1 )
texture = ExtResource( 1 )

[node name="FauxProjectile" type="Sprite" parent="."]
modulate = Color( 1.4, 1.3, 1.4, 1 )
position = Vector2( -0.131882, -32.9994 )
texture = ExtResource( 4 )
offset = Vector2( 0, 20 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 0 )

[node name="PortalOpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "SoundEffects"

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
